# ENLACE

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.frontend  Dockerfile.scheduler  ENLACE_Master_Execution_Plan_v1.docx  alembic.ini  docker-compose.yml  enlace-complete-project-v1.tar  go-live.sh  pulso-nginx.conf  pytest.ini
data/scripts/: seed_data.py
docs/: architecture.md  data-dictionary.md  data-trust-ratings.md  feature-matrix.md  pipelines.md  research-ai-telecom-disruptors.md  research-business-models.md  research-competitive-landscape.md  research-data-engagement.md  research-geospatial-viz.md  research-international-expansion.md  research-llm-ai-agents.md  research-master-synthesis.md  research-ml-repos.md  research-monetization-partnerships.md  research-regulatory-financial.md  research-revenue-markets.md  research-standards-protocols.md  research-tech-paradigms.md  research-telecom-tools.md  roi-calculator.md  whitepaper.md
docs/api/: README.md
docs/plans/: 2026-03-08-enlace-full-implementation.md  2026-03-08-enlace-platform-design.md  2026-03-09-sentinel-urban-growth-design.md  2026-03-09-sentinel-urban-growth-plan.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/messages/: en.json  pt-BR.json
frontend/src/: i18n.ts
infrastructure/: materialized_views.sql
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_users_and_roles.py  0003_extensions.py  0004_wave2_features.py  0005_report_credits.py
python/: Dockerfile  mcp_server.py  requirements.txt
python/api/: config.py  database.py  logging_config.py  main.py
python/ml/: config.py  run_scoring.py
python/mna/: acquirer.py  seller.py
python/pipeline/: base.py  config.py  crontab.txt  enlace-scheduler.service  http_client.py  run_all.py  scheduler.py
python/reports/: __init__.py  dossier_generator.py  generator.py
python/rural/: __init__.py  community_profiler.py  cost_model_rural.py  funding_matcher.py  hybrid_designer.py  river_crossing.py  satellite_backhaul.py  solar_power.py
rust/: Cargo.toml
rust/crates/enlace-optimizer/: Cargo.toml
rust/crates/enlace-optimizer/src/: annealing.rs  candidates.rs  constraints.rs  lib.rs  output.rs  setcover.rs
rust/crates/enlace-propagation/: Cargo.toml
rust/crates/enlace-propagation/src/: atmosphere.rs  common.rs  coverage.rs  diffraction.rs  fresnel.rs  lib.rs  vegetation.rs
rust/crates/enlace-propagation/src/models/: fspl.rs  hata.rs  itm.rs  mod.rs  p1812.rs  p530.rs  tr38901.rs
rust/crates/enlace-raster/: Cargo.toml
rust/crates/enlace-raster/src/: geotiff.rs  lib.rs  renderer.rs
rust/crates/enlace-service/: Cargo.toml  build.rs
rust/crates/enlace-service/proto/: rf_service.proto
rust/crates/enlace-service/src/: config.rs  handlers.rs  main.rs
rust/crates/enlace-terrain/: Cargo.toml
rust/crates/enlace-terrain/src/: cache.rs  elevation.rs  lib.rs  profile.rs  srtm.rs
rust/enlace-tiles/: Cargo.toml
rust/enlace-tiles/src/: main.rs
scaffolding/: .env.template  README.md
scaffolding/infrastructure/: docker-compose.yml  init.sql
scaffolding/rust/: Cargo.toml
scripts/: enlace-scheduler.service  enrich_all_cnpj.py  enrich_qsa_partners.py  generate_market_data.py  marketing_agent.py  run-pipeline.sh
site/: package-lock.json  package.json  tailwind.config.ts
site/public/: robots.txt  sitemap-core.xml  sitemap-mercado.xml  sitemap.xml
specs/: mna_standalone.md  phase1_data_foundation.md  phase2_expansion_planning.md  phase2_rf_engine.md  phase3_fault_intelligence.md  phase3_regulatory.md  phase4_rural.md  phase4_ui.md
tests/: conftest.py  test_satellite_router.py  test_sentinel_pipeline.py
tests/api/: conftest.py  test_routers.py
tests/unit/: test_auth.py  (+10 more)
(+296 files in other folders)
