[workspace]
resolver = "2"
members = [
    "crates/enlace-terrain",
    "crates/enlace-propagation",
    "crates/enlace-optimizer",
    "crates/enlace-raster",
    "crates/enlace-service",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"
authors = ["Enlace Platform"]

[workspace.dependencies]
# Geospatial
gdal = "0.17"
geo = "0.28"
geojson = "0.24"
proj = "0.27"
h3o = "0.6"

# Math & computation
rayon = "1.10"
num-traits = "0.2"
nalgebra = "0.33"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# I/O
memmap2 = "0.9"
byteorder = "1.5"

# gRPC
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.40", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.14"

# Error handling
anyhow = "1.0"
thiserror = "2.0"
