[package]
name = "enlace-optimizer"
version.workspace = true
edition.workspace = true

[dependencies]
enlace-terrain = { path = "../enlace-terrain" }
enlace-propagation = { path = "../enlace-propagation" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
