[package]
name = "enlace-propagation"
version.workspace = true
edition.workspace = true

[dependencies]
enlace-terrain = { path = "../enlace-terrain" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
