[package]
name = "enlace-terrain"
version.workspace = true
edition.workspace = true

[dependencies]
memmap2 = { workspace = true }
byteorder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
lru = "0.12"
